# dynamic-runner

./: .gitignore  .rules  .rules-zed-provided  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  new_requirements_plan.md  package.nix  primary_state_machines.md  pyproject.toml
crates/db_distributed_manager/: Cargo.toml  GENERALIZATION.md
crates/db_distributed_manager/src/: lib.rs  primary.rs  secondary.rs  state.rs  zip_extract.rs
crates/db_distributed_manager/tests/: network_integration.rs
crates/dynrunner-core/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-core/src/: bounded_string.rs  bounded_string_tests.rs  importance.rs  lib.rs  node_id.rs  output_gather.rs  path_resolve.rs  role_span.rs  spawn_tasks_validator.rs  task_hash.rs  traits.rs  types.rs  types_tests.rs
crates/dynrunner-core/tests/: spawn_tasks_validator.rs
crates/dynrunner-discovery/: Cargo.toml
crates/dynrunner-discovery/src/: lib.rs
crates/dynrunner-driver/: Cargo.toml
crates/dynrunner-driver/src/: cluster.rs  config.rs  error.rs  identity.rs  lib.rs  session.rs  ssh_master.rs  ssh_target.rs
crates/dynrunner-driver/tests/: master_lifetime.rs  ssh_master_unit.rs
crates/dynrunner-gateway/: Cargo.toml
crates/dynrunner-gateway/src/: config.rs  filesystem.rs  lib.rs  local.rs  path.rs  shell.rs  ssh.rs  traits.rs
crates/dynrunner-gateway/tests/: master_lifetime.rs
crates/dynrunner-manager-distributed/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-manager-distributed/src/: affine_action.rs  affine_satisfied.rs  anti_entropy.rs  authority_snapshot.rs  cluster_state.rs  collection_stats.rs  discovery.rs  force_print_trigger.rs  graceful_abort_trigger.rs  lib.rs  message_router.rs  oploop_instrumentation.rs  own_tick_health.rs  panik_watcher.rs  peer_credentials.rs  peer_lifecycle.rs  pull_coordinator.rs  run_narrator.rs  runtime_watchdog.rs  settled_spill.rs  setup_exec.rs  snapshot_stream.rs  state.rs  test_capture.rs  upload_action.rs  warn_throttle.rs  zip_extract.rs
crates/dynrunner-manager-distributed/tests/: graceful_abort_preseat.rs  graceful_abort_primary_signal.rs  mesh_runtime_split.rs  network_integration.rs  wire_limit_ordering.rs
crates/dynrunner-manager-local/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-manager-local/src/: lib.rs  monitor.rs  pool.rs  stats.rs  worker.rs  worker_stdio_tail.rs
crates/dynrunner-manager-local/tests/: composite_lazy_chain.rs  lazy_phase_chain_smoke.rs  memprofile_smoke.rs  subprocess_integration.rs
crates/dynrunner-protocol-manager-worker/: Cargo.toml
crates/dynrunner-protocol-manager-worker/src/: codec.rs  codec_tests.rs  command.rs  framing.rs  lib.rs  state.rs
crates/dynrunner-protocol-primary-secondary/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-protocol-primary-secondary/src/: address.rs  chunking.rs  chunking_tests.rs  cluster_mutation.rs  codec.rs  codec_tests.rs  depth_watch.rs  freshness.rs  lib.rs  messages.rs  relay.rs  removal_cause.rs  role_routing.rs  setup_bootstrap.rs  transport.rs  transport_tests.rs
crates/dynrunner-publish/: Cargo.toml
crates/dynrunner-publish/src/: lib.rs
crates/dynrunner-pyo3/: Cargo.toml  GENERALIZATION.md  pyproject.toml  python_todo.md
crates/dynrunner-pyo3/src/: affine_action_bridge.rs  affine_satisfied_bridge.rs  custom_message_bridge.rs  discovery.rs  estimator.rs  fulfillability_matcher_bridge.rs  identifier.rs  lib.rs  logging.rs  network.rs  peer_lifecycle_bridge.rs  protocol_manager_worker.rs  publish.rs  pytypes.rs  spawn_priority.rs  subprocess_factory.rs  system_resources.rs  task_completed_bridge.rs  task_def.rs  transport.rs  upload_action_bridge.rs  worker_message_bridge.rs
crates/dynrunner-reap/: Cargo.toml
crates/dynrunner-reap/src/: bounded_command.rs  lib.rs  process_probe.rs  reap.rs  testing.rs
crates/dynrunner-scheduler/: Cargo.toml
crates/dynrunner-scheduler-api/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-scheduler-api/src/: lib.rs  pending_pool.rs  pending_pool_tests.rs
crates/dynrunner-scheduler/src/: lib.rs  tests.rs
crates/dynrunner-slurm/: Cargo.toml
crates/dynrunner-slurm/src/: authority.rs  child_reaping.rs  config.rs  job_manager.rs  lib.rs  local_forward.rs  observer_job_ledger.rs  observer_reconnect.rs  packaging.rs  peer_info.rs  pipeline.rs  preparation.rs  respawn.rs  wrapper_script.rs
crates/dynrunner-slurm/tests/: local_forward_mux.rs  upload.rs
crates/dynrunner-transport-channel/: Cargo.toml
crates/dynrunner-transport-channel/src/: either_primary.rs  lib.rs  manager_runner.rs  mesh.rs  peer_transport.rs  secondary_transport.rs  tests_either_primary.rs  tests_manager_runner.rs  tests_peer_basics.rs  tests_role_routing.rs
crates/dynrunner-transport-channel/tests/: mesh_partition.rs  snapshot_bootstrap.rs
crates/dynrunner-transport-quic/: Cargo.toml  GENERALIZATION.md
crates/dynrunner-transport-quic/src/: accept_loop.rs  certs.rs  colocated_primary.rs  framing.rs  lib.rs  listener_pair.rs  mesh_handle_transport.rs  no_primary.rs  transport.rs  wss.rs
crates/dynrunner-transport-socket/: Cargo.toml
crates/dynrunner-transport-socket/src/: lib.rs  named_socket.rs  socketpair.rs
crates/dynrunner-transport-socket/tests/: oversize_repro.rs
crates/dynrunner-transport-tunnel/: Cargo.toml
crates/dynrunner-transport-tunnel/src/: lib.rs  secondary_link.rs  secondary_link_tests.rs  tests.rs  transport.rs
crates/dynrunner-worker/: Cargo.toml
crates/dynrunner-worker/src/: lib.rs
shutdown-manager/: Cargo.toml  README.md  flake.nix
shutdown-manager/src/: cleanup.rs  clock.rs  config.rs  lib.rs  main.rs  podman.rs  poll_loop.rs  process_probe.rs  shutdown_flag.rs  signals.rs  squeue_snapshot.rs  testing.rs
shutdown-manager/tests/: integration.rs
slurm-wrapper/: Cargo.toml
slurm-wrapper/config/: Cargo.toml
slurm-wrapper/config/src/: cli.rs  lib.rs
slurm-wrapper/wrapper/: Cargo.toml
slurm-wrapper/wrapper/src/: bin_resolve.rs  cgroup.rs  dirs.rs  image.rs  linger.rs  main.rs  memcap.rs  network.rs  podman_run.rs  preflight.rs  relay.rs  scratch_lock.rs  shutdown_spawn.rs  (+2 more)
(+1193 files in other folders)
