[workspace]
resolver = "2"
# `shutdown-manager/` is a standalone subproject with its own Cargo.toml
# and flake — it is intentionally NOT part of this workspace so the
# stable musl-static teardown binary does not get rebuilt every time a
# framework crate changes.
exclude = ["shutdown-manager", "slurm-wrapper"]
members = [
    "crates/dynrunner-core",
    "crates/dynrunner-protocol-manager-worker",
    "crates/dynrunner-protocol-primary-secondary",
    "crates/dynrunner-scheduler-api",
    "crates/dynrunner-scheduler",
    "crates/dynrunner-transport-socket",
    "crates/dynrunner-transport-channel",
    "crates/dynrunner-transport-quic",
    "crates/dynrunner-transport-tunnel",
    "crates/dynrunner-worker",
    "crates/dynrunner-manager-local",
    "crates/dynrunner-manager-distributed",
    "crates/dynrunner-gateway",
    "crates/dynrunner-driver",
    "crates/dynrunner-discovery",
    "crates/dynrunner-slurm",
    "crates/dynrunner-pyo3",
    "crates/dynrunner-publish",
]

[workspace.package]
version       = "0.4.0"
edition       = "2024"
license       = "Apache-2.0"
authors       = ["sirati"]
repository    = "https://github.com/sirati/dynamic-runner"
homepage      = "https://github.com/sirati/dynamic-runner"
description   = "Multi-process / multi-host Python task runner backed by a Rust workspace."
readme        = "README.md"
keywords      = ["runner", "batch", "pyo3", "tokio", "ipc"]
categories    = ["concurrency", "asynchronous"]

[workspace.dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util", "sync", "time", "process", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
async-trait = "0.1"
pyo3 = { version = "0.28" }
quinn = "0.11"
rustls = "0.23"
rcgen = "0.13"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
nix = { version = "0.29", features = ["socket", "process", "signal"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
sha2 = "0.10"
base64 = "0.22"
url = "2"
zstd = { version = "0.13", default-features = false }

# Internal crates
dynrunner-core = { path = "crates/dynrunner-core" }
dynrunner-protocol-manager-worker = { path = "crates/dynrunner-protocol-manager-worker" }
dynrunner-protocol-primary-secondary = { path = "crates/dynrunner-protocol-primary-secondary" }
dynrunner-scheduler-api = { path = "crates/dynrunner-scheduler-api" }
dynrunner-scheduler = { path = "crates/dynrunner-scheduler" }
dynrunner-transport-socket = { path = "crates/dynrunner-transport-socket" }
dynrunner-transport-channel = { path = "crates/dynrunner-transport-channel" }
dynrunner-transport-quic = { path = "crates/dynrunner-transport-quic" }
dynrunner-transport-tunnel = { path = "crates/dynrunner-transport-tunnel" }
dynrunner-worker = { path = "crates/dynrunner-worker" }
dynrunner-manager-local = { path = "crates/dynrunner-manager-local" }
dynrunner-manager-distributed = { path = "crates/dynrunner-manager-distributed" }
dynrunner-gateway = { path = "crates/dynrunner-gateway" }
dynrunner-driver = { path = "crates/dynrunner-driver" }
dynrunner-discovery = { path = "crates/dynrunner-discovery" }
dynrunner-slurm = { path = "crates/dynrunner-slurm" }
dynrunner-pyo3 = { path = "crates/dynrunner-pyo3" }
dynrunner-publish = { path = "crates/dynrunner-publish" }

[workspace.lints.clippy]
# Catch std::sync::MutexGuard / RefCell::borrow held across `.await`. These
# can deadlock async runtimes (the future is moved across tasks while the
# guard pretends to be Send/blocking-safe). See L4.3 audit follow-up.
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
