[package]
name = "dynrunner-slurm-shutdown"
version = "0.1.0"
edition = "2021"
description = "Standalone musl-static binary that tears down the rootless-podman container of a SLURM job after the job exits, from a systemd-user-scope cgroup that outlives proctrack."
license = "Apache-2.0"
repository = "https://github.com/sirati/dynamic-runner"

# Intentionally NOT a member of the parent Cargo workspace at the repo root.
# This binary is fixed infrastructure: it depends on no framework types and
# should not rebuild whenever the framework workspace changes.
[workspace]

[[bin]]
name = "dynrunner-slurm-shutdown"
path = "src/main.rs"

[lib]
name = "dynrunner_slurm_shutdown"
path = "src/lib.rs"

[dependencies]
# libc is the only direct external runtime dependency:
#   * `signals` installs SA_SIGINFO handlers via `sigaction(2)` and reads
#     `siginfo_t.si_pid` to report which process sent each signal.
# `default-features = false` keeps the static binary minimal (no std-feature
# pull-ins we don't use); `sigaction`/`siginfo_t`/`kill` are all available
# without optional features.
libc = { version = "0.2", default-features = false }

# The shared reap state-machine + the host-PID probe/clock traits live
# here so the wrapper and this manager carry NO private copy of the
# SIGTERM→grace→SIGKILL reap. Path-dep only (it is itself libc+std), so
# the musl-static binary stays minimal. The nix builds set `src` to the
# repo root so this sibling path is reachable from the standalone build.
dynrunner-reap = { path = "../crates/dynrunner-reap" }

[dev-dependencies]
# Cross-platform temp dir for filesystem cleanup tests. Tiny crate, no proc-macros.
tempfile = "3"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
strip = true
codegen-units = 1
overflow-checks = false
debug = false
incremental = false

[profile.release.package."*"]
opt-level = "z"
