[package]
name = "db_distributed_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
db_comm_api_base = { workspace = true }
db_primary_secondary_comm = { workspace = true }
db_scheduler_api = { workspace = true }
db_scheduler_impl = { workspace = true }
db_local_manager = { workspace = true }
db_transport_quic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
db_transport_channel = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
