[package]
name             = "dynrunner-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Shared types and traits for the dynrunner workspace."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
