[package]
name             = "dynrunner-core"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Shared types and traits for the dynrunner workspace."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# `tokio::sync::oneshot::Sender<_>` lives inside the `PrimaryCommand`
# enum variants — every command carries a reply oneshot back to the
# `PyPrimaryHandle` caller. `features = ["sync"]` keeps the dependency
# narrow (no runtime, no I/O); the heavy tokio features still live on
# the consuming crates that actually drive the runtime.
tokio = { workspace = true, features = ["sync"] }

[lints]
workspace = true
