[package]
name             = "dynrunner-discovery"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Rust-driven directory traversal with a generic visitor + filesystem backend."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
dynrunner-gateway = { workspace = true }

[lints]
workspace = true
