[package]
name             = "dynrunner-gateway"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Gateway abstraction for command execution + file transfer (local + SSH)."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
tokio = { workspace = true, features = ["process", "fs", "time"] }
tracing = { workspace = true }
thiserror = { workspace = true }
tempfile = "3"
# `nix::sys::signal::kill` for daemon-master lifetime control: the
# OpenSSH `ControlPersist=yes` master forks-and-detaches at handshake
# end (reparented to systemd --user / init), so the launcher Child we
# spawned is a short-lived zombie. We track the daemon PID via
# `ssh -O check` and signal it directly. `kill(pid, None)` is the
# existence probe; SIGTERM/SIGKILL the teardown levers in Drop.
nix = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }
# Log-capture for the master-watcher integration test (T4): assert
# that `tracing::error!("SSH master exited unexpectedly")` actually
# fires when the master process dies under us. `no-env-filter` is
# required because Rust integration tests (`tests/*.rs`) build as a
# separate crate from `dynrunner-gateway`, so the default
# `RUST_LOG=<crate>=trace` env filter would silence logs emitted from
# `dynrunner_gateway`'s code path.
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[lints]
workspace = true
