[package]
name             = "dynrunner-manager-distributed"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Multi-host primary/secondary manager."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-scheduler = { workspace = true }
dynrunner-manager-local = { workspace = true }
dynrunner-transport-quic = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
dynrunner-transport-channel = { workspace = true }
dynrunner-transport-tunnel = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
# `test-util` exposes `tokio::time::pause` + `#[tokio::test(start_paused=true)]`
# so the observer-announcer retry test can advance virtual time past the
# 100 ms initial backoff without burning real wall-clock seconds.
tokio = { workspace = true, features = ["test-util"] }

[lints]
workspace = true
