[package]
name             = "dynrunner-manager-distributed"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Multi-host primary/secondary manager."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-protocol-primary-secondary = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-scheduler = { workspace = true }
dynrunner-manager-local = { workspace = true }
dynrunner-transport-quic = { workspace = true }
# Channel (in-process mpsc) primary↔secondary transport. The composed
# authoritative primary (`primary::compose`) reaches its same-peer
# secondary over a `ChannelSecondaryTransportEnd` loopback, so this is a
# runtime dependency of the composition path — not test-only.
dynrunner-transport-channel = { workspace = true }
# `signal` feature: `panik_watcher::wait_for_sigterm_if_enabled` uses
# `tokio::signal::unix::signal(SignalKind::terminate())` so the
# secondary path can react to host-driven SIGTERM (SLURM time-limit /
# scancel via `podman exec kill -TERM`) by firing the same panik
# cascade as a sentinel-file trigger. Not in the workspace base
# feature set because this crate is currently the only consumer.
tokio = { workspace = true, features = ["signal"] }
# `panik_watcher::wait_for_sigterm_if_enabled` records the SIGTERM
# sender PID via a chained `SA_SIGINFO` action. `signal-hook-registry`
# multiplexes it alongside tokio's own SIGTERM handler (same registry),
# and `libc` supplies the `siginfo_t::si_pid()` accessor read in the
# action.
libc = { workspace = true }
signal-hook-registry = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
zip = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# Snapshot-stream package payload codec: each package is a partial
# `ClusterStateSnapshot` encoded as CBOR (compact + no string-escaping
# cost), then base64-wrapped to ride the JSON wire envelope.
ciborium = { workspace = true }
base64 = { workspace = true }
# Lock-free atomic Arc swap backing the synchronously-readable
# off-loop slurm-authoritative life-state snapshot. See
# `authority_snapshot::OffLoopAuthoritySnapshot` for the safety-net
# tiebreak that consumes it.
arc-swap = { workspace = true }

[dev-dependencies]
dynrunner-transport-tunnel = { workspace = true }
# Test-only Router backdoors (blacklist injection for the post-bounce
# unroutable-primary fixtures; route-state inspection) — same feature
# the transport-channel tests enable.
dynrunner-protocol-primary-secondary = { workspace = true, features = ["test-utils"] }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
# Round-trip decoder for the memprofile-hook integration test.
# Only the read side is exercised — the write side lives in
# `dynrunner-manager-local::memprofile::writer` and depends on the
# main-deps `zstd` over there.
zstd = { workspace = true, default-features = false }
# `test-util` exposes `tokio::time::pause` + `#[tokio::test(start_paused=true)]`
# so the observer-announcer retry test can advance virtual time past the
# 100 ms initial backoff without burning real wall-clock seconds.
# `signal` is also enabled here for the panik-watcher SIGTERM tests
# (dev-dep features are unioned with the main dep's features).
tokio = { workspace = true, features = ["test-util", "signal"] }
# `panik_watcher` SIGTERM tests raise SIGTERM to self via
# `nix::sys::signal::raise(Signal::SIGTERM)`. The workspace `nix`
# pin already enables the `signal` feature.
nix = { workspace = true }

[lints]
workspace = true
