[package]
name             = "dynrunner-manager-local"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
description            = "Single-host worker manager."
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[dependencies]
dynrunner-core = { workspace = true }
dynrunner-scheduler-api = { workspace = true }
dynrunner-protocol-manager-worker = { workspace = true }
dynrunner-transport-channel = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
# Used by the OOM watcher (`crate::oom`) to construct the
# structured log line as a single JSON document, then hand it
# to `tracing::info!(target: "oom_watcher", ...)`. Constructing
# the document via `serde_json::json!` keeps field-name shape
# the consumer locked in lined up with one source of truth.
serde_json = { workspace = true }
# Per-task memory profile sink: zstd-framed JSONL (one self-contained
# frame per sample so a hard manager death loses at most the
# in-flight sample). `default-features = false` keeps us off the
# bundled compile path; libzstd-sys picks up the system library
# provided by the nix dev-shell.
zstd = { workspace = true, default-features = false }

# `nix::sys::wait::waitpid` for non-blocking reap of dead worker
# subprocesses. The `process` feature gates `sys::wait`. Cfg-gated
# to unix because waitpid is POSIX; the framework treats reap-not-
# available as `exit_status: None`, so non-unix builds still
# compile and the dispatcher just logs the disconnect without
# signal info.
[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
dynrunner-scheduler = { workspace = true }
dynrunner-transport-socket = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
# Used by `cgroup::tests` to inject a fake `/sys/fs/cgroup` tree at a
# tempdir root so the orchestrator's predicate helpers + writer can
# be exercised without touching real cgroup pseudo-files.
tempfile = "3"

[lints]
workspace = true
